libtorch-ffi/src/Torch/Internal/Objects.hs

{-# LANGUAGE DataKinds #-}
{-# LANGUAGE FlexibleInstances #-}

module Torch.Internal.Objects where

import Foreign.C.String
import Foreign.C.Types
import Foreign


import Torch.Internal.Type
import Torch.Internal.Class

foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10dict"
  c_delete_c10dict  :: FunPtr( Ptr (C10Dict '(IValue,IValue)) -> IO () )

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10dict"
  c_delete_c10dict'  :: Ptr (C10Dict '(IValue,IValue)) -> IO ()

instance CppObject (C10Dict '(IValue,IValue)) where
  fromPtr ptr = newForeignPtr c_delete_c10dict ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10dict' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10listivalue"
  c_delete_c10listivalue :: FunPtr ( Ptr (C10List IValue) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10listivalue"
  c_delete_c10listivalue' ::  Ptr (C10List IValue) -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10listtensor"
  c_delete_c10listtensor :: FunPtr ( Ptr (C10List Tensor) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10listtensor"
  c_delete_c10listtensor' ::  Ptr (C10List Tensor) -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10listoptionaltensor"
  c_delete_c10listoptionaltensor :: FunPtr ( Ptr (C10List (C10Optional Tensor)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10listoptionaltensor"
  c_delete_c10listoptionaltensor' ::  Ptr (C10List (C10Optional Tensor)) -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10listdouble"
  c_delete_c10listdouble :: FunPtr ( Ptr (C10List CDouble) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10listdouble"
  c_delete_c10listdouble' ::  Ptr (C10List CDouble) -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10listint"
  c_delete_c10listint :: FunPtr ( Ptr (C10List Int64) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10listint"
  c_delete_c10listint' ::  Ptr (C10List Int64) -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10listbool"
  c_delete_c10listbool :: FunPtr ( Ptr (C10List CBool) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10listbool"
  c_delete_c10listbool' ::  Ptr (C10List CBool) -> IO ()

instance CppObject (C10List IValue) where
  fromPtr ptr = newForeignPtr c_delete_c10listivalue ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10listivalue' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (C10List Tensor) where
  fromPtr ptr = newForeignPtr c_delete_c10listtensor ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10listtensor' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (C10List (C10Optional Tensor)) where
  fromPtr ptr = newForeignPtr c_delete_c10listoptionaltensor ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10listoptionaltensor' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (C10List CDouble) where
  fromPtr ptr = newForeignPtr c_delete_c10listdouble ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10listdouble' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (C10List Int64) where
  fromPtr ptr = newForeignPtr c_delete_c10listint ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10listint' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (C10List CBool) where
  fromPtr ptr = newForeignPtr c_delete_c10listbool ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10listbool' ptr
  {-# INLINE [1] deletePtr #-}



foreign import ccall unsafe "hasktorch_finalizer.h &delete_c10tuple"
  c_delete_c10tuple :: FunPtr ( Ptr (C10Ptr IVTuple) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_c10tuple"
  c_delete_c10tuple' ::  Ptr (C10Ptr IVTuple) -> IO ()

instance CppObject (C10Ptr IVTuple) where
  fromPtr ptr = newForeignPtr c_delete_c10tuple ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_c10tuple' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_context"
  c_delete_context :: FunPtr ( Ptr Context -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_context"
  c_delete_context' ::  Ptr Context -> IO ()

instance CppObject Context where
  fromPtr ptr = newForeignPtr c_delete_context ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_context' ptr
  {-# INLINE [1] deletePtr #-}


foreign import ccall unsafe "hasktorch_finalizer.h &delete_dimname"
  c_delete_dimname :: FunPtr ( Ptr Dimname -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_dimname"
  c_delete_dimname' ::  Ptr Dimname -> IO ()

instance CppObject Dimname where
  fromPtr ptr = newForeignPtr c_delete_dimname ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_dimname' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_dimnamelist"
  c_delete_dimnamelist :: FunPtr ( Ptr DimnameList -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_dimnamelist"
  c_delete_dimnamelist' ::  Ptr DimnameList -> IO ()

instance CppObject DimnameList where
  fromPtr ptr = newForeignPtr c_delete_dimnamelist ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_dimnamelist' ptr
  {-# INLINE [1] deletePtr #-}


foreign import ccall unsafe "hasktorch_finalizer.h &delete_generator"
  c_delete_generator :: FunPtr ( Ptr Generator -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_generator"
  c_delete_generator' ::  Ptr Generator -> IO ()

instance CppObject Generator where
  fromPtr ptr = newForeignPtr c_delete_generator ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_generator' ptr
  {-# INLINE [1] deletePtr #-}


foreign import ccall unsafe "hasktorch_finalizer.h &delete_ivalue"
  c_delete_ivalue :: FunPtr ( Ptr IValue -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_ivalue"
  c_delete_ivalue' ::  Ptr IValue -> IO ()

instance CppObject IValue where
  fromPtr ptr = newForeignPtr c_delete_ivalue ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_ivalue' ptr
  {-# INLINE [1] deletePtr #-}


foreign import ccall unsafe "hasktorch_finalizer.h &delete_ivaluelist"
  c_delete_ivaluelist :: FunPtr ( Ptr IValueList -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_ivaluelist"
  c_delete_ivaluelist' ::  Ptr IValueList -> IO ()

instance CppObject IValueList where
  fromPtr ptr = newForeignPtr c_delete_ivaluelist ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_ivaluelist' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_intarray"
  c_delete_intarray :: FunPtr ( Ptr IntArray -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_intarray"
  c_delete_intarray' ::  Ptr IntArray -> IO ()

instance CppObject IntArray where
  fromPtr ptr = newForeignPtr c_delete_intarray ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_intarray' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_module"
  c_delete_module :: FunPtr ( Ptr Module -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_module"
  c_delete_module' ::  Ptr Module -> IO ()

instance CppObject Module where
  fromPtr ptr = newForeignPtr c_delete_module ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_module' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_jitgraph"
  c_delete_jitgraph :: FunPtr ( Ptr (SharedPtr JitGraph) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_jitgraph"
  c_delete_jitgraph' ::  Ptr (SharedPtr JitGraph) -> IO ()

instance CppObject (SharedPtr JitGraph) where
  fromPtr ptr = newForeignPtr c_delete_jitgraph ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_jitgraph' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_jitnode"
  c_delete_jitnode :: FunPtr ( Ptr JitNode -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_jitnode"
  c_delete_jitnode' ::  Ptr JitNode -> IO ()

instance CppObject JitNode where
  fromPtr ptr = newForeignPtr c_delete_jitnode ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_jitnode' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_jitvalue"
  c_delete_jitvalue :: FunPtr ( Ptr JitValue -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_jitvalue"
  c_delete_jitvalue' ::  Ptr JitValue -> IO ()

instance CppObject JitValue where
  fromPtr ptr = newForeignPtr c_delete_jitvalue ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_jitvalue' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_scalar"
  c_delete_scalar :: FunPtr ( Ptr Scalar -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_scalar"
  c_delete_scalar' ::  Ptr Scalar -> IO ()

instance CppObject Scalar where
  fromPtr ptr = newForeignPtr c_delete_scalar ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_scalar' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stdarraybool2"
  c_delete_stdarraybool2 :: FunPtr ( Ptr (StdArray '(CBool,2)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stdarraybool2"
  c_delete_stdarraybool2' ::  Ptr (StdArray '(CBool,2)) -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stdarraybool3"
  c_delete_stdarraybool3 :: FunPtr ( Ptr (StdArray '(CBool,3)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stdarraybool3"
  c_delete_stdarraybool3' ::  Ptr (StdArray '(CBool,3)) -> IO ()

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stdarraybool4"
  c_delete_stdarraybool4 :: FunPtr ( Ptr (StdArray '(CBool,4)) -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stdarraybool4"
  c_delete_stdarraybool4' ::  Ptr (StdArray '(CBool,4)) -> IO ()

instance CppObject (StdArray '(CBool,2)) where
  fromPtr ptr = newForeignPtr c_delete_stdarraybool2 ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stdarraybool2' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (StdArray '(CBool,3)) where
  fromPtr ptr = newForeignPtr c_delete_stdarraybool3 ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stdarraybool3' ptr
  {-# INLINE [1] deletePtr #-}

instance CppObject (StdArray '(CBool,4)) where
  fromPtr ptr = newForeignPtr c_delete_stdarraybool4 ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stdarraybool4' ptr
  {-# INLINE [1] deletePtr #-}

foreign import ccall unsafe "hasktorch_finalizer.h &delete_stdstring"
  c_delete_stdstring :: FunPtr ( Ptr StdString -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_stdstring"
  c_delete_stdstring' ::  Ptr StdString -> IO ()

instance CppObject StdString where
  fromPtr ptr = newForeignPtr c_delete_stdstring ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_stdstring' ptr
  {-# INLINE [1] deletePtr #-}



foreign import ccall unsafe "hasktorch_finalizer.h &delete_storage"
  c_delete_storage :: FunPtr ( Ptr Storage -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_storage"
  c_delete_storage' ::  Ptr Storage -> IO ()

instance CppObject Storage where
  fromPtr ptr = newForeignPtr c_delete_storage ptr
  {-# INLINE [1] fromPtr #-}
  deletePtr ptr = c_delete_storage' ptr
  {-# INLINE [1] deletePtr #-}



foreign import ccall unsafe "hasktorch_finalizer.h &delete_symbol"
  c_delete_symbol :: FunPtr ( Ptr Symbol -> IO ())

foreign import ccall unsafe "hasktorch_finalizer.h delete_symbol"
  c_delete_symbol' ::  Ptr Symbol -> IO ()
